Updates figure list

--- a/figures/figures.org
+++ b/figures/figures.org
@@ -7,12 +7,13 @@
 * [[./illustr_extrms_vorticity]]
 * [[./dynamics_extremes]]
 * [[./timeseries_extremes]]
+* [[./illustr_density_streamlines]]
 * [[./shear_asof_drag]]
 Pas de script python pour le moment
 Je ne comprends plus ce que sont 'inverse events'
 * timeseries_extrms_AVG
 * [[./illustr_AMS]]
 * [[./AMS_OU]]
-* [[./AMS_drag_resampling
-* AMS_drag_trajectories
+* [[./AMS_drag_resampling]]
+* [[AMS_drag_trajectories]]
 * IS_GKTL
