Adds new figures to draft

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -11,7 +11,7 @@
 \usepackage{acro}
 \usepackage{subfig}
 \usepackage{caption}
-\graphicspath{{../figures/}}
+\graphicspath{{./figures/}}
 
 \captionsetup[figure]{justification=raggedright}
 
@@ -99,7 +99,7 @@ The purpose of this paper is twofold.
 
 \begin{figure}
   \centering
-  \includegraphics[width=\linewidth]{illustration_vorticity_tf2}
+  \includegraphics[width=\linewidth]{illustr_vort/illustration_vorticity_tf2}
   \caption{Typical vorticity field in the computational domain. The square obstacle is represented by the gray area in the center of the channel.}
 \end{figure}
 %% Description de la géométrie
@@ -160,7 +160,7 @@ In particular, we show that extreme fluctuations mainly result from fluctuations
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.7\linewidth]{illustration_signal_drag_1}
+  \includegraphics[width=0.7\linewidth]{typical_drag_signal/typical_drag_signal.png}
   \caption{Typical temporal evolution of the drag acting on the square cylinder pictured in figure~\ref{fig:computational_domain}. The correlation time $\tau_c$ is defined further in this text and correspond to the typical fluctuation timescale of the drag.}
   \label{fig:typical_drag_signal}
 \end{figure}
@@ -170,8 +170,8 @@ In particular, we show that extreme fluctuations mainly result from fluctuations
 
 \begin{figure}
   \centering
-    \subfloat[\ac{pdf} for the drag fluctuations $f'_d$]{\label{fig:pdf_drag_a}\includegraphics[width=.5\linewidth]{../figures/pdf_drag_SQ_asymetry_expo}}
-    \subfloat[Autocorrelation function of the the instantaneous drag $f_d$]{\label{fig:pdf_drag_b}\includegraphics[width=.5\linewidth]{../figures/correlation_with_log}}  
+    \subfloat[\ac{pdf} for the drag fluctuations $f'_d$]{\label{fig:pdf_drag_a}\includegraphics[width=.5\linewidth]{./PDF_drag/PDF_drag.png}}
+    \subfloat[Autocorrelation function of the the instantaneous drag $f_d$]{\label{fig:pdf_drag_b}\includegraphics[width=.5\linewidth]{autocorr_drag/autocorr_drag.png}}  
   \caption{\textbf{(a)} \ac{pdf} describing the statistics of the instantaneous drag fluctuations $f'_d = (f_d - \bar{f_d})/\sigma$. This \ac{pdf} has been estimated on the basis of a timeseries spanning $T_{tot} = 10^6 \tau_c$. $\bar{f_d}$ and $\sigma$ denote the average and the standard deviation computed over the whole timeseries, respectively. The linear fits highlight the exponential behaviour of the the \ac{pdf} for rare events. \textbf{(b)} Autocorrelation function for the instantaneous drag $f_d$, defined as $(\mathbb{E}[f_d(t+\tau)f_d(t)]-\mathbb{E}[f_d]^2)/\sigma^2$ and estimated from a timeseries spanning $T_{tot} = 10^6 \tau_c$. This figure shows the exponential decay of the correlations over time.}
   \label{fig:pdf_drag}
 \end{figure}
@@ -239,7 +239,7 @@ events.
 
 \begin{figure}
   \centering
-  \includegraphics[width=.6\linewidth]{return_time_drag}
+  \includegraphics[width=.6\linewidth]{return_time/return_time.png}
   \caption{Drag fluctuation amplitude as a function the corresponding return time. The return time $r(a)$ is the typical timescale of occurrence of a fluctuation of amplitude larger than $a$.}
   \label{fig:return_time_instant}
 \end{figure}
@@ -260,31 +260,51 @@ where $\tilde{p}_{fb}^{\star}$ and $\tilde{p}_{base}^{\star}$ denote the fluctua
 Figure~\ref{fig:contribution_forebody_and_base_pressure} shows the relative contributions $\tilde{p}_{base}^{\star}/\tilde{f}_d^{\star}$ and $\tilde{p}_{fb}^{\star}/\tilde{f}_d^{\star}$ to the overall drag fluctuation for the base and forebody pressure fluctuations, respectively.  
 \begin{figure}
   \centering
-  \label{fig:contribution_forebody_and_base_pressure}
+  \includegraphics{pressure_ratio/pressure_ratio.png}
+  \label{fig:pressure_ratio}
 \end{figure}
 It shows that among the 104 sampled extreme events, the base pressure fluctuation typically contributes for $80\%$ of the overall drag fluctuation.
 By contrast with typical drag fluctuations, extreme fluctuations of the drag acting on the square cylinder are dominated by the variation of the pressure in the vicinity of the base of the obstacle.
-In addition, figure~\ref{fig:contribution_forebody_and_base_pressure} hints that, the larger the fluctuation, the more important is the contribution of the base pressure fluctuation, relatively to the forebody pressure fluctuation.
+In addition, figure~\ref{fig:pressure_ratio} hints that, the larger the fluctuation, the more important is the contribution of the base pressure fluctuation, relatively to the forebody pressure fluctuation.
 
 \subsubsection{Dynamical aspects of extreme drag fluctuations}
 \label{sec:dynamical_aspects}
 
 \begin{figure}
   \centering
-  \begin{minipage}{0.85\linewidth}
-    \begin{tabular}{c|c}
-    \subfloat[$f'_d = 11.6\sigma$]{\label{fig:top_4_events_vorticity_a}\includegraphics[width=0.4\linewidth]{event_95_vort.png}} \hspace{0.5cm} & \hspace{0.5cm} \subfloat[$f'_d = 11.2\sigma$]{\includegraphics[width=0.4\linewidth]{event_69_vort.png}} \\
-    \hline
-    \subfloat[$f'_d = 10.6\sigma$]{\includegraphics[width=0.4\linewidth]{event_53_vort.png}} \hspace{0.5cm} & \hspace{0.5cm} \subfloat[$10\sigma$]{\includegraphics[width=0.4\linewidth]{event_20_vort.png}}
-    \end{tabular}
-  \end{minipage}
-\begin{minipage}[h]{0.1\linewidth}
+  \includegraphics[width=.8\linewidth]{illustr_extrms_vorticity/illustr_extrms_vorticity.png}
+  \caption{\label{fig:top_4_events_vorticity} Vorticity field at $t=t^{\star}$ for the four highest drag fluctuations in the timeseries. The corresponding drag timeseries can be found in figure~\ref{fig:extremes_timeseries}.
+    The high value for the drag results from the formation of a strong negative (red) vortex inducing a pressure drop at the base of the obstacle. The formation of such a structure is aided by important vorticity production at the bottom boundary of the obstacle coupled with the influence of positive vorticity in the vicinity of the base.}
+\end{figure}
+
+
+\begin{figure}
   \centering
-  \includegraphics[width=\linewidth]{scale_vorticity.png}
-\end{minipage}
-\caption{\label{fig:top_4_events_vorticity} Vorticity field at $t=t^{\star}$ for the four highest drag fluctuations in the timeseries. The corresponding drag timeseries can be found in figure~\ref{fig:extremes_timeseries}.
-  The high value for the drag results from the formation of a strong negative (red) vortex inducing a pressure drop at the base of the obstacle. The formation of such a structure is aided by important vorticity production at the bottom boundary of the obstacle coupled with the influence of positive vorticity in the vicinity of the base.}
-\end{figure}  
+  \includegraphics[width=.5\linewidth]{illustr_density_streamlines/illustr_density_streamlines.png}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=.5\linewidth]{timeseries_extremes/timeseries_extremes.png}
+\end{figure}
+
+
+% \begin{figure}
+%   \centering
+%   \begin{minipage}{0.85\linewidth}
+%     \begin{tabular}{c|c}
+%     \subfloat[$f'_d = 11.6\sigma$]{\label{fig:top_4_events_vorticity_a}\includegraphics[width=0.4\linewidth]{event_95_vort.png}} \hspace{0.5cm} & \hspace{0.5cm} \subfloat[$f'_d = 11.2\sigma$]{\includegraphics[width=0.4\linewidth]{event_69_vort.png}} \\
+%     \hline
+%     \subfloat[$f'_d = 10.6\sigma$]{\includegraphics[width=0.4\linewidth]{event_53_vort.png}} \hspace{0.5cm} & \hspace{0.5cm} \subfloat[$10\sigma$]{\includegraphics[width=0.4\linewidth]{event_20_vort.png}}
+%     \end{tabular}
+%   \end{minipage}
+% \begin{minipage}[h]{0.1\linewidth}
+%   \centering
+%   \includegraphics[width=\linewidth]{scale_vorticity.png}
+% \end{minipage}
+% \caption{\label{fig:top_4_events_vorticity} Vorticity field at $t=t^{\star}$ for the four highest drag fluctuations in the timeseries. The corresponding drag timeseries can be found in figure~\ref{fig:extremes_timeseries}.
+%   The high value for the drag results from the formation of a strong negative (red) vortex inducing a pressure drop at the base of the obstacle. The formation of such a structure is aided by important vorticity production at the bottom boundary of the obstacle coupled with the influence of positive vorticity in the vicinity of the base.}
+% \end{figure}  
 
 % \begin{figure}
 %   \centering
@@ -517,19 +537,19 @@ In this way, it gives the opportunity for new events, associated to a higher flu
 However, such modification(s) of the resampling procedure must be implemented with care, so as to preserve the mathematical properties of the \ac{ams} and \ac{tams}.
 \begin{figure}
   \centering
-  \includegraphics[width=.7\linewidth]{ams/figure_AMS}
+  \includegraphics[width=.7\linewidth]{illustr_AMS/figure_AMS}
   \caption{Illustration of one selection-mutation step in the \ac{ams} algorithm for the computation of the probability that an observable $A:\mathbb{R}^d\to \mathbb{R}$  reaches values larger than $Q$ over a trajectory of duration $T_a$.}
 \end{figure}
 \begin{figure}
   \centering
-  \includegraphics[width=.7\linewidth]{ams/comparaison_temps_de_retour}
+  \includegraphics[width=.7\linewidth]{AMS_OU/AMS_OU.png}
     \caption{Illustration of the efficiency of the \ac{tams} algorithm with respect to direct sampling. The amplitude of fluctuations for the \ac{ou} process~\eqref{eq:OUprocess_chap_ams} are represented along the Y-axis. Along the X-axis is represented the typical computational cost required to sample fluctuations of the corresponding amplitude in both the \ac{tams} and direct sampling. In the latter, the typical computational cost is simply the return time $r(a)$. The computational cost associated to a level $a$ is the \ac{tams} is denoted by $C(a)$. The orange line represents the evolution of the level $\mathcal{Q}_j^{\star}$ as a function of the cost $C(a)$. The blue stars represent the maximum of $x(t)$ over the resampled trajectory \emph{after} it is resampled, that is at iteration $j+1$. Finally, the solid black line is the analytical solution for the return time of amplitude $a$~\cite{lestang_computing_2018}.}
   \label{fig:comparaison_temps_de_retour}
 \end{figure}
 
 \begin{figure}
   \centering
-  \includegraphics[width=.7\linewidth]{ams/instant_256_20}
+  \includegraphics[width=.7\linewidth]{AMS_drag_resampling/AMS_drag_resampling.png}
     \caption{Maximum of the instantaneous drag along the resampled trajectories, denoted by $\tilde{f}_d^{(j)}$, as a function of the corresponding computational cost $C_j$, defined in~\eqref{eq:comp_cost_iterations}. In both figures, the \ac{tams} is iterated until extinction. 
     The solid black line indicates the typical fluctuation amplitude $a$ as a function of the corresponding  \textit{return time} $r(a)$. It is the typical timescale of occurrence of fluctuations above $a$. Furthermore, the square markers depict the maximum $\tilde{f}_{d,n}^{(0)},\,\, 1\leq n \leq N_c$ over the initial trajectories.
     This figure illustrates that in both experiments the \ac{tams} does not improve the sampling of rare fluctuations. On can see that the maximum values among the resampled trajectories concentrates on values already sampled over the initial trajectories. Eventually, extinction is reached as the algorithm is unable to generate a fluctuation higher than the maximum fluctuation in the initial ensemble of trajectories.
@@ -538,7 +558,7 @@ However, such modification(s) of the resampling procedure must be implemented wi
 
 \begin{figure}
   \centering
-  \includegraphics[width=.7\linewidth]{ams/iter_181}
+  \includegraphics[width=.7\linewidth]{AMS_drag_trajectories/AMS_drag_trajectories.png}
     \caption{Visualisation of the drag timeseries corresponding to the set of trajectories in the ensemble, at different iterations along the algorithm. In this experiment, the \ac{tams} is used with the instantaneous drag $f_d$ as a score function. Trajectories have a duration $T_a = 5\tau_c$ and their number is $N_c = 32$.
     One can see that, as the number of iterations increases, the number of independent resampled trajectories drastically decreases until extinction at iteration $181$. The timeseries corresponding to the two initial trajectories exhibiting the highest fluctuations are displayed in colour. In all four figures, colour is inherited from the parent trajectory. It illustrates that the two strongest initial trajectories quickly become predominant in the ensemble, as the other are discarded.
     As can be seen in figure~\ref{fig:subfigc}, trajectories only separate well after the maximum is reached. Therefore, resampling the blue trajectories based on the red trajectories can only change the overall maximum by a very small amount. Consequently, blue trajectories are discarded one after the other, each time resampled into another instance of the red trajectory. This new instance has roughly the same maximum as the others.}
@@ -696,7 +716,7 @@ In this context, the \ac{gktl} algorithm is particularly suited to sample trajec
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.7\linewidth]{illustration_IS}
+%  \includegraphics[width=0.7\linewidth]{illustration_IS}
   \caption{\textbf{(a)}: Importance sampling for the time-averaged drag acting on the obstacle embedded in the test flow. The drag is averaged over $T=10\tau_c$. 
   The \ac{gktl} algorithm is used with $N_c = 16384$ copies and $T_a = T= 10\tau_c$ for three increasing values of the bias $k$. Additionally, the cloning period is $\tau = \tau_c/2$, resulting in $M=20$ iterations of the evolution/selection procedure. Note that in this particular example the last cloning stage at $t_{19}$ is not performed.
   As $k$ is increased, the sampled \ac{pdf} is shifted towards extreme values.
